# office-agent

./: .gitignore  E2E_TESTCASES_WINDOWS.md  E2E_TEST_WINDOWS.md  LEADTIMES.md  PLAN.md  package.json  setup.sh
.docs/: 00-overview.md  PLAN.md  README.md  oa-index.html  oa-index.html:Zone.Identifier  oa-marketing-pipeline.html  phase-0-bootstrap.md  phase-1-marketing-mcp-p0.md  phase-1b-hr-mcp-p0.md  phase-2-skills-cli-cron.md  phase-3-mcp-p1-oauth.md  phase-4-opendesign-prompt.md  phase-4-ui.md  phase-5-hardening.md  phase-6-tauri-migration.md
agent-core/: .gitignore  package-lock.json
agent-core/.plans/: phase-6-tauri-migration-implementation.md
agent-core/apps/desktop/: package.json
agent-core/apps/desktop-tauri-spike/: .gitignore  Cargo.toml  README.md  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
agent-core/apps/desktop-tauri-spike/capabilities/: pty-spike.json
agent-core/apps/desktop-tauri-spike/pty-test/: Cargo.toml
agent-core/apps/desktop-tauri-spike/src/: main.rs  main.ts  terminal.rs
agent-core/apps/desktop/electron/: backend-env.cjs  main.cjs
agent-core/apps/desktop/scripts/: build-hermes-backend.cjs  build-mcps.cjs  run-electron-builder.cjs  stage-native-bin.cjs
agent-core/cron/: jobs.toml
agent-core/gateway/: run.py
agent-core/hermes_cli/: _domain_shared.py  audit_api.py  config.py  hr.py  hr_api.py  main.py  marketing.py  marketing_api.py  web_server.py
agent-core/skills/audit/: __init__.py  logger.py
agent-core/skills/hr/: __init__.py  compliance.py  pii.py  roles.py
agent-core/skills/hr/recruitment/: SKILL.md
agent-core/skills/marketing/: quality-scorer.py  quality_scorer.py
agent-core/skills/marketing/marketing-pipeline/: SKILL.md
agent-core/skills/quota_budgeter/: __init__.py  budgeter.py
agent-core/skills/reply-policy/: SKILL.md  policy.py  templates.toml  test_policy.py
agent-core/tests/skills/: test_audit.py  test_compliance.py  test_pii.py  test_quality_scorer.py  test_quota_budgeter.py
agent-core/tools/: mcp_sync.py
agent-core/web/src/: App.tsx
agent-core/web/src/contexts/: PageHeaderProvider.tsx  page-header-context.ts
agent-core/web/src/lib/: api.ts
agent-core/web/src/pages/hr/: HRAnalyticsPage.tsx  HRCandidatesPage.tsx  HRCommsPage.tsx  HRHubPage.tsx  HRJobsPage.tsx  HRPipelinePage.tsx  HRSchedulePage.tsx
agent-core/web/src/pages/marketing/: CatalogPage.tsx  CommentInboxPage.tsx  EditPreviewPage.tsx  MAnalyticsPage.tsx  MarketingHubPage.tsx  PipelinePage.tsx  PublishConsolePage.tsx  ReviewQueuePage.tsx  ScriptWorkspacePage.tsx
agent-core/web/src/plugins/: sdk.d.ts
optional-mcps/: Cargo.toml  SMOKE.md
optional-mcps/mcp-catalog/: Cargo.toml  manifest.toml  schema.sql  seed.sql
optional-mcps/mcp-catalog/src/: db.rs  main.rs  tools.rs
optional-mcps/mcp-cv-screen/: manifest.toml  pyproject.toml
optional-mcps/mcp-cv-screen/src/mcp_cv_screen/: __init__.py  parse.py  portfolio.py  score.py  server.py  skills.py
optional-mcps/mcp-hr-data/: Cargo.toml  manifest.toml  schema.sql
optional-mcps/mcp-hr-data/src/: audit.rs  main.rs  tools.rs
optional-mcps/mcp-ledger/: Cargo.toml  manifest.toml  schema.sql
optional-mcps/mcp-ledger/src/: audit.rs  db.rs  main.rs  tools.rs
optional-mcps/mcp-schedule/: Cargo.toml  manifest.toml
optional-mcps/mcp-schedule/src/: client.rs  main.rs  tools.rs
optional-mcps/mcp-social-meta/: Cargo.toml  manifest.toml
optional-mcps/mcp-social-meta/src/: client.rs  main.rs  oauth.rs  tools.rs  upload_state.rs
optional-mcps/mcp-social-tiktok/: Cargo.toml  manifest.toml
optional-mcps/mcp-social-tiktok/src/: client.rs  main.rs  oauth.rs  tools.rs
optional-mcps/mcp-social-youtube/: Cargo.toml  manifest.toml
optional-mcps/mcp-social-youtube/src/: client.rs  main.rs  oauth.rs  tools.rs
optional-mcps/mcp-trend-research/: Cargo.toml  manifest.toml
optional-mcps/mcp-trend-research/src/: client.rs  main.rs  tools.rs
optional-mcps/mcp-video-edit/: Cargo.toml  MULTI_APP_MCP_INSIGHT.md  manifest.toml
optional-mcps/mcp-video-edit/src/: ffmpeg.rs  main.rs  tools.rs
optional-mcps/mcp-zalo-oa/: Cargo.toml  manifest.toml
optional-mcps/mcp-zalo-oa/src/: audit.rs  client.rs  main.rs  tools.rs  webhook.rs
