[workspace]
resolver = "2"
members = [
    "mcp-catalog",
    "mcp-video-edit",
    "mcp-ledger",
    "mcp-social-youtube",
    "mcp-social-meta",
    "mcp-social-tiktok",
    "mcp-trend-research",
    "mcp-hr-data",
    "mcp-schedule",
    "mcp-zalo-oa",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
rmcp = { version = "0.1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
axum = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
wiremock = "0.6"
