[package]
name = "mcp-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-catalog"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
