[project]
name = "mcp-cv-screen"
version = "0.1.0"
description = "CV/portfolio screening MCP server (Python)."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1",
    "pymupdf>=1.24",
    "pillow>=10",
    "faster-whisper>=1.0",
    "httpx>=0.27",
    "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
