[package]
name = "mcp-hr-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-hr-data"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4"] }
