[package]
name = "mcp-social-youtube"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-social-youtube"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
chrono-tz = "0.9"
url.workspace = true

[dev-dependencies]
wiremock.workspace = true
