[package]
name = "mcp-video-edit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-video-edit"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true

[dev-dependencies]
tempfile = "3"
