[package]
name = "mcp-zalo-oa"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-zalo-oa"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
axum.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
wiremock.workspace = true
